Refactor: seguridad y calidad de código en backend y frontend
Backend:
- Eliminar endpoint /api/auth/register público que creaba cuentas admin
- Incluir rol como GrantedAuthority en JWT para usar hasAuthority() en Spring Security
- Centralizar control de acceso en SecurityConfig con hasAuthority('admin')
- Añadir @EnableMethodSecurity y @PreAuthorize en endpoints sensibles
- Requerir autenticación para uploads y exportaciones de chat
- Eliminar @CrossOrigin redundante de todos los controllers (gestionado en SecurityConfig)
- Corregir RuntimeException por ResponseStatusException en UserService
- Añadir validación de longitud máxima de mensajes en ChatController
- Añadir patrón env var para JWT_SECRET en application.properties

Frontend:
- Proteger ruta /perfil con ProtectedRoute

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>